# claws_mail_gnome_plugin

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  README  configure.ac
src/: Makefile.am  gnome_plugin.c
